# Nullgram

./: .editorconfig  .gitignore  README.md  README_CN.md  settings.gradle.kts
.github/workflows/: ci-unofficial.yml
TMessagesProj/: build.gradle.kts  proguard-rules.pro
TMessagesProj/jni/: CMakeLists.txt  jni.c
TMessagesProj/jni/integrity/: CMakeLists.txt  log_common.cc  log_common.h  remove_rust.cc  time_utils.cc  time_utils.h
TMessagesProj/src/main/java/org/telegram/messenger/: BuildVars.java  FileLog.java  MediaDataController.java  MessageObject.java  SendMessagesHelper.java
TMessagesProj/src/main/java/org/telegram/messenger/video/: TextureRenderer.java
TMessagesProj/src/main/java/org/telegram/tgnet/: ConnectionsManager.java
TMessagesProj/src/main/java/org/telegram/ui/: ChatActivity.java  ChatEditActivity.java  ChatUsersActivity.java  LaunchActivity.java  PhotoViewer.java  PremiumPreviewFragment.java  ProfileActivity.java
TMessagesProj/src/main/java/org/telegram/ui/ActionBar/: Theme.java
TMessagesProj/src/main/java/org/telegram/ui/Cells/: ChatMessageCell.java  GroupCallUserCell.java  TextSelectionHelper.java
TMessagesProj/src/main/java/org/telegram/ui/Components/: ChatActivityEnterView.java  ShareAlert.java  SharedMediaLayout.java
TMessagesProj/src/main/java/top/qwq2333/nullgram/activity/: ExperimentSettingActivity.java
TMessagesProj/src/main/java/top/qwq2333/nullgram/utils/: Assertions.java
TMessagesProj/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
(+1 files in other folders)
